fix(client): added scrollbar gutter

--- a/apps/client/src/styles.css
+++ b/apps/client/src/styles.css
@@ -80,4 +80,7 @@
     body {
         @apply bg-background text-foreground;
     }
+    main {
+        scrollbar-gutter: stable;
+    }
 }
